@@ -27,6 +27,7 @@
           with-foreign-object with-c-var with-foreign-string
           foreign-allocate allocate-deep allocate-shallow foreign-free
           foreign-pointer set-foreign-pointer
+          close-foreign-library
           foreign-variable foreign-function))
 
 (eval-when (load compile eval)
